--- a/.godot/editor/project_metadata.cfg
+++ b/.godot/editor/project_metadata.cfg
@@ -21,3 +21,8 @@ last_selected_language="GDScript"
 
 picker_shape=3
 color_mode=0
+
+[debug_options]
+
+run_debug_paths=false
+run_debug_collisions=true
