feat(player) : add iddle down animation

--- a/.godot/editor/project_metadata.cfg
+++ b/.godot/editor/project_metadata.cfg
@@ -1,6 +1,6 @@
 [editor_metadata]
 
-executable_path="C:/Users/mathi/Desktop/Godot_v4.3-stable_win64.exe"
+executable_path="C:/Users/enzoh/AppData/Roaming/Godot-Manager/versions/4.3-stable/Godot_v4.3-stable_win64.exe"
 use_advanced_connections=false
 
 [dialog_bounds]
@@ -25,4 +25,4 @@ color_mode=0
 [debug_options]
 
 run_debug_paths=false
-run_debug_collisions=true
+run_debug_collisions=false
