--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -17,8 +17,8 @@ dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://assets/world/Dungeon_24x24.png")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://assets/", "res://assets/world/", "res://assets/player/run/")
+dock_filesystem_selected_paths=PackedStringArray("res://assets/player/idle/idle_down_40x40.png")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://assets/", "res://assets/player/", "res://assets/player/idle/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
@@ -26,11 +26,11 @@ dock_5="Inspector,Node,History"
 [EditorNode]
 
 open_scenes=PackedStringArray("res://source/player.tscn", "res://source/main.tscn")
-current_scene="res://source/main.tscn"
-center_split_offset=-485
+current_scene="res://source/player.tscn"
+center_split_offset=-344
 selected_default_debugger_tab_idx=1
-selected_main_editor_idx=0
-selected_bottom_panel_item=12
+selected_main_editor_idx=2
+selected_bottom_panel_item=0
 
 [ScriptEditor]
 
