feat(SaveManager) add the savemanager and add load and save function

--- a/.godot/editor/project_metadata.cfg
+++ b/.godot/editor/project_metadata.cfg
@@ -1,6 +1,6 @@
 [editor_metadata]
 
-executable_path="C:/Users/enzoh/OneDrive/Documents/Cours/8PRO135-11 Programmation avec des moteurs de jeu/Ressource/Godot_v4.3-stable_mono_win64/Godot_v4.3-stable_mono_win64/Godot_v4.3-stable_mono_win64.exe"
+executable_path="C:/Users/mathi/Downloads/Godot_v4.3-stable_mono_win64/Godot_v4.3-stable_mono_win64/Godot_v4.3-stable_mono_win64.exe"
 use_advanced_connections=false
 
 [dialog_bounds]
