--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -2,7 +2,7 @@
 
 dock_3_selected_tab_idx=0
 dock_4_selected_tab_idx=0
-dock_5_selected_tab_idx=0
+dock_5_selected_tab_idx=1
 dock_floating={}
 dock_bottom=[]
 dock_closed=[]
@@ -17,7 +17,7 @@ dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://source/main.gd")
+dock_filesystem_selected_paths=PackedStringArray("res://source/OverrideMainLoop.cs")
 dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://source/", "res://assets/player/idle/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
@@ -35,7 +35,7 @@ selected_bottom_panel_item=0
 [ScriptEditor]
 
 open_scripts=["res://source/main.gd", "res://source/player.gd"]
-selected_script="res://source/main.gd"
+selected_script="res://source/player.gd"
 open_help=[]
 script_split_offset=70
 list_split_offset=0
