--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -17,7 +17,7 @@ dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://source/OverrideMainLoop.cs")
+dock_filesystem_selected_paths=PackedStringArray("res://source/menu.tscn")
 dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://source/", "res://assets/player/idle/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
@@ -25,12 +25,12 @@ dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://source/player.tscn", "res://source/main.tscn")
-current_scene="res://source/main.tscn"
+open_scenes=PackedStringArray("res://source/player.tscn", "res://source/main.tscn", "res://source/menu.tscn")
+current_scene="res://source/menu.tscn"
 center_split_offset=-344
 selected_default_debugger_tab_idx=1
-selected_main_editor_idx=2
-selected_bottom_panel_item=0
+selected_main_editor_idx=0
+selected_bottom_panel_item=1
 
 [ScriptEditor]
 
